<resources>
    <string name="app_name">Coffee Lovers App</string>
    <string name="Show_open_orders_only">Show open orders only</string>
    <string name="Tablet_friendly">Tablet friendly</string>
    <string name="Add">Add</string>
    <string name="Name">Name</string>
    <string name="Type">Type</string>
    <string name="Size">Size</string>
    <string name="Cappuccino">Cappuccino</string>
    <string name="Latte">Latte</string>
    <string name="Americano">Americano</string>
    <string name="Milk">Milk</string>
    <string name="Caffeine_free">Caffeine free</string>
    <string name="Quantity">Quantity</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="Place_order">Place order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
