<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrEditOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name_or_table"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/activity_add_or_edit_order_name"
            android:text="Table 1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Type"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <RadioGroup
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/activity_add_or_edit_order_cappuccino_radio_button"
                android:text="@string/Cappuccino"
                android:checked="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/activity_add_or_edit_order_americano_radio_button"
                android:text="@string/Americano"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/activity_add_or_edit_order_latte_radio_button"
                android:text="@string/Latte"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Size"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/activity_add_or_edit_order_size_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caffeine_free"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/activity_add_or_edit_order_caffeine_free_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Milk"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/activity_add_or_edit_order_milk_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/activity_add_or_edit_order_decrease_quantity"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Minus" />

            <TextView
                android:id="@+id/activity_add_or_edit_order_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_add_or_edit_order_increase_quantity"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Plus" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/activity_add_or_edit_order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="summary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/activity_add_or_edit_order_add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/Place_order" />

    </LinearLayout>

</ScrollView>